--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bootstrap": "^4.5.0",
     "css-loader": "^4.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
